# awsst

./: Cargo.toml  README.md
src/: main.rs  sts_client.rs
src/profile/: configs.rs  configure.rs  credentials.rs  mod.rs  select.rs
src/utils/: file.rs  mod.rs  prompt.rs
