[package]
authors = ["mytooyo"]
edition = "2021"
name = "awsst"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLIツール
clap = {version = "4.5", features = ["derive"]}
# Date and time library
chrono = "0.4"
# 表示をTable型式にするため
prettytable-rs = "0.10"
# コンソール上で入力や選択するため
dialoguer = "0.11"
# AWS_PROFILEを環境変数に設定するため
setenv = "0.1"

# ディレクトリ関連の処理を行うため
dirs = "6.0"

# AWS関連のSDK
aws-config = "1.6"
aws-sdk-sts = "1.64"
tokio = {version = "1", features = ["full"]}

# Ctrl+Cを検知するため
ctrlc = "3.4"

# AWSのConfig系のファイルをTOML形式で読み込むため
regex = "1.11"
